--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Foundry
 cache/
 out/
+.gas-snapshot
 
 # MacOS
 .DS_Store
@@ -10,3 +11,10 @@ out/
 broadcast/
 output/
 coverage/
+
+# Certora
+.certora*
+certora/munged-simple/*
+.zip*
+*.zip
+
