--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "modules/ntp"]
 	path = modules/ntp
 	url = git@github.com:maple-labs/non-transparent-proxy.git
+[submodule "modules/address-registry"]
+	path = modules/address-registry
+	url = git@github.com:maple-labs/address-registry.git
