--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,29 +8,9 @@ on:
 
 jobs:
 
-  # Check all formatting rules are satisfied.
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo TODO
-
-  # Check all linter rules are satisfied.
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo TODO
-
-  # Build contracts.
-  build:
-    runs-on: ubuntu-latest
-    needs: [format, lint]
-    steps:
-      - run: echo TODO
-
   # Run all tests.
   test:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -61,17 +41,10 @@ jobs:
           name: gas-report
           path: gas.txt
 
-  # Run formal verification.
-  verify:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - run: echo TODO
-
   # Check contract sizes.
   size:
     runs-on: ubuntu-latest
-    needs: [test, verify]
+    needs: [test]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -93,7 +66,7 @@ jobs:
   # Check and generate code coverage report.
   coverage:
     runs-on: ubuntu-latest
-    needs: [test, verify]
+    needs: [test]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -131,7 +104,7 @@ jobs:
   # Post gas report.
   gas:
     runs-on: ubuntu-latest
-    needs: [test, verify]
+    needs: [test]
     steps:
       - uses: actions/download-artifact@v3
         with:
@@ -142,24 +115,3 @@ jobs:
         with:
           message-path: gas.txt
           preformatted: true
-
-  # Generate slither report.
-  slither:
-    runs-on: ubuntu-latest
-    needs: [test, verify]
-    steps:
-      - run: echo TODO
-
-  # Generate NatSpec documentation.
-  docs:
-    runs-on: ubuntu-latest
-    needs: [test, verify]
-    steps:
-      - run: echo TODO
-
-  # Package artifacts for publishing.
-  package:
-    runs-on: ubuntu-latest
-    needs: [coverage, gas, slither, docs]
-    steps:
-      - run: echo TODO
