--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,10 @@ gas_limit = "18446744073709551615"
 verbosity = 3
 gas_reports = ["EmergencyModule", "RecapitalizationModule", "MapleTokenProxy"]
 
+[profile.production]
+optimizer = true
+optimizer_runs = 200
+
 [profile.default.fuzz]
 runs = 1_000
 
